--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,16 @@ buildscript {
     }
 }
 
+plugins {
+    id 'maven-publish'
+}
+
 // This is now required because aapt2 has to be downloaded from the
 // google() repository beginning with version 3.2 of the Android Gradle Plugin
 allprojects {
     repositories {
         mavenCentral()
+        maven { url "https://jitpack.io" }
         google()
     }
 }
@@ -27,3 +32,7 @@ allprojects {
 repositories {
     mavenCentral()
 }
+
+
+
+
