--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,5 +17,9 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'com.github.jitpack:android-example:1.0.1'
 }
+
+
 
