--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.github.jitpack:android-example:1.0.1'
+    api project(':TeamCode')
 }
 
 
